--- a/examples/nb_08_authentication.ipynb
+++ b/examples/nb_08_authentication.ipynb
@@ -19,11 +19,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "imports",
    "metadata": {},
-   "outputs": [],
-   "source": "import os\nimport uuid\nimport subprocess\nimport requests\nimport pandas as pd\nfrom datetime import datetime, timezone, timedelta\n\n# Use TEST_DATABASE_URL for testing (falls back to DATABASE_URL if not set)\nDATABASE_URL = os.environ.get(\"TEST_DATABASE_URL\") or os.environ.get(\"DATABASE_URL\")\nif not DATABASE_URL:\n    raise ValueError(\"Please set TEST_DATABASE_URL or DATABASE_URL environment variable\")\n\n# IMPORTANT: Override both TIMEDB_DSN and DATABASE_URL so the API server uses the same database\n# The API reads from TIMEDB_DSN first, then falls back to DATABASE_URL\nos.environ[\"TIMEDB_DSN\"] = DATABASE_URL\nos.environ[\"DATABASE_URL\"] = DATABASE_URL\n\n# API base URL\nAPI_BASE_URL = \"http://127.0.0.1:8000\"\n\nprint(f\"Database URL configured: {DATABASE_URL[:50]}...\")\nprint(f\"Environment variables set for API server\")\nprint(f\"API URL: {API_BASE_URL}\")"
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database URL configured: postgresql://devuser:devpassword@127.0.0.1:5432/de...\n",
+      "Environment variables set for API server\n",
+      "API URL: http://127.0.0.1:8000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import uuid\n",
+    "import subprocess\n",
+    "import requests\n",
+    "import pandas as pd\n",
+    "from datetime import datetime, timezone, timedelta\n",
+    "\n",
+    "# Use TEST_DATABASE_URL for testing (falls back to DATABASE_URL if not set)\n",
+    "DATABASE_URL = os.environ.get(\"TEST_DATABASE_URL\") or os.environ.get(\"DATABASE_URL\")\n",
+    "if not DATABASE_URL:\n",
+    "    raise ValueError(\"Please set TEST_DATABASE_URL or DATABASE_URL environment variable\")\n",
+    "\n",
+    "# IMPORTANT: Override both TIMEDB_DSN and DATABASE_URL so the API server uses the same database\n",
+    "# The API reads from TIMEDB_DSN first, then falls back to DATABASE_URL\n",
+    "os.environ[\"TIMEDB_DSN\"] = DATABASE_URL\n",
+    "os.environ[\"DATABASE_URL\"] = DATABASE_URL\n",
+    "\n",
+    "# API base URL\n",
+    "API_BASE_URL = \"http://127.0.0.1:8000\"\n",
+    "\n",
+    "print(f\"Database URL configured: {DATABASE_URL[:50]}...\")\n",
+    "print(f\"Environment variables set for API server\")\n",
+    "print(f\"API URL: {API_BASE_URL}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -37,10 +71,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "setup-schema",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Delete tables: \u001b[32m✓\u001b[0m All timedb tables deleted\n",
+      "\n",
+      "Create tables: Creating database schema...\n",
+      "✓ Schema created successfully\n",
+      "\u001b[32m✓\u001b[0m Base timedb tables created\n",
+      "\u001b[32m✓\u001b[0m Users table created\n",
+      "\n",
+      "\u001b[1;32mSchema created successfully!\u001b[0m\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Delete existing schema (for a clean start)\n",
     "result = subprocess.run(\n",
@@ -105,10 +155,19 @@
     "    print(\"Error:\", result.stderr)\n",
     "\n",
     "# Extract API key from output\n",
-    "for line in result.stdout.split('\\n'):\n",
-    "    if 'API Key:' in line:\n",
-    "        api_key_a = line.split('API Key:')[1].strip()\n",
-    "        print(f\"\\nStored API Key A: {api_key_a}\")"
+    "import re\n",
+    "clean = re.sub(r'\\x1b\\[[0-9;]*[A-Za-z]', '', result.stdout)\n",
+    "m = re.search(r'API Key:\\s*([^\\s]+)', clean)\n",
+    "if m:\n",
+    "    api_key_a = m.group(1).strip()\n",
+    "    print(f\"\\nStored API Key B: {api_key_a}\")\n",
+    "else:\n",
+    "    # Fallback: parse cleaned lines\n",
+    "    for line in clean.split('\\n'):\n",
+    "        if 'API Key:' in line:\n",
+    "            api_key_a = line.split('API Key:')[1].strip()\n",
+    "            print(f\"\\nStored API Key A (fallback): {api_key_a}\")\n",
+    "            break"
    ]
   },
   {
@@ -125,17 +184,26 @@
     "     \"--tenant-id\", tenant_b_id, \n",
     "     \"--email\", \"bob@tenant-b.com\"],\n",
     "    capture_output=True,\n",
-    "    text=True\n",
+    "    text=True,\n",
     ")\n",
     "print(result.stdout)\n",
+    "print(result)\n",
     "if result.returncode != 0:\n",
     "    print(\"Error:\", result.stderr)\n",
     "\n",
-    "# Extract API key from output\n",
-    "for line in result.stdout.split('\\n'):\n",
-    "    if 'API Key:' in line:\n",
-    "        api_key_b = line.split('API Key:')[1].strip()\n",
-    "        print(f\"\\nStored API Key B: {api_key_b}\")"
+    "import re\n",
+    "clean = re.sub(r'\\x1b\\[[0-9;]*[A-Za-z]', '', result.stdout)\n",
+    "m = re.search(r'API Key:\\s*([^\\s]+)', clean)\n",
+    "if m:\n",
+    "    api_key_b = m.group(1).strip()\n",
+    "    print(f\"\\nStored API Key B: {api_key_b}\")\n",
+    "else:\n",
+    "    # Fallback: parse cleaned lines\n",
+    "    for line in clean.split('\\n'):\n",
+    "        if 'API Key:' in line:\n",
+    "            api_key_b = line.split('API Key:')[1].strip()\n",
+    "            print(f\"\\nStored API Key B (fallback): {api_key_b}\")\n",
+    "            break\n"
    ]
   },
   {
@@ -170,7 +238,36 @@
    "id": "start-api",
    "metadata": {},
    "outputs": [],
-   "source": "import timedb as td\nimport subprocess\nimport time\n\n# IMPORTANT: Kill any existing API server first to ensure we start fresh\n# with the correct database connection\nresult = subprocess.run([\"pkill\", \"-f\", \"uvicorn.*timedb\"], capture_output=True)\nif result.returncode == 0:\n    print(\"Killed existing API server\")\n    time.sleep(2)  # Wait for port to be released\n\n# Verify environment is set correctly\nimport os\nprint(f\"TIMEDB_DSN: {os.environ.get('TIMEDB_DSN', 'NOT SET')[:60]}...\")\nprint(f\"DATABASE_URL: {os.environ.get('DATABASE_URL', 'NOT SET')[:60]}...\")\n\n# Start API server in background\ntd.start_api_background()\n\n# Verify it's running\ntime.sleep(2)\n\n# Check API\ntry:\n    response = requests.get(f\"{API_BASE_URL}/\")\n    print(f\"\\nAPI is running: {response.json()['name']}\")\nexcept Exception as e:\n    print(f\"API check failed: {e}\")"
+   "source": [
+    "import timedb as td\n",
+    "import subprocess\n",
+    "import time\n",
+    "\n",
+    "# IMPORTANT: Kill any existing API server first to ensure we start fresh\n",
+    "# with the correct database connection\n",
+    "result = subprocess.run([\"pkill\", \"-f\", \"uvicorn.*timedb\"], capture_output=True)\n",
+    "if result.returncode == 0:\n",
+    "    print(\"Killed existing API server\")\n",
+    "    time.sleep(2)  # Wait for port to be released\n",
+    "\n",
+    "# Verify environment is set correctly\n",
+    "import os\n",
+    "print(f\"TIMEDB_DSN: {os.environ.get('TIMEDB_DSN', 'NOT SET')[:60]}...\")\n",
+    "print(f\"DATABASE_URL: {os.environ.get('DATABASE_URL', 'NOT SET')[:60]}...\")\n",
+    "\n",
+    "# Start API server in background\n",
+    "td.start_api_background()\n",
+    "\n",
+    "# Verify it's running\n",
+    "time.sleep(2)\n",
+    "\n",
+    "# Check API\n",
+    "try:\n",
+    "    response = requests.get(f\"{API_BASE_URL}/\")\n",
+    "    print(f\"\\nAPI is running: {response.json()['name']}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"API check failed: {e}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -485,13 +582,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "timedb",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
