update, rename runs -> batches

--- a/examples/nb_01_write_read_pandas.ipynb
+++ b/examples/nb_01_write_read_pandas.ipynb
@@ -106,7 +106,7 @@
     "})\n",
     "\n",
     "# Insert first time series (series_id will be auto-generated)\n",
-    "result1 = td.insert_run(df=df1)\n",
+    "result1 = td.insert_batch(df=df1)\n",
     "print(f\"✓ Inserted first time series\")\n",
     "print(f\"  Series name -> series_id mapping: {result1.series_ids}\")\n",
     "print(f\"  Time range: {dates1[0]} to {dates1[-1]}\")\n",
@@ -140,7 +140,7 @@
     "})\n",
     "\n",
     "# Insert second time series (series_id will be auto-generated)\n",
-    "result2 = td.insert_run(df=df2)\n",
+    "result2 = td.insert_batch(df=df2)\n",
     "print(f\"✓ Inserted second time series\")\n",
     "print(f\"  Series name -> series_id mapping: {result2.series_ids}\")\n",
     "print(f\"  Time range: {dates2[0]} to {dates2[-1]}\")\n",
@@ -329,7 +329,7 @@
     "    'wind_power': [45.0 + i * 1.2 for i in range(24)]  # Gradual increase\n",
     "})\n",
     "\n",
-    "result1 = td.insert_run(df=df_batch1, series_ids={'wind_power': shared_series_id})\n",
+    "result1 = td.insert_batch(df=df_batch1, series_ids={'wind_power': shared_series_id})\n",
     "print(f\"✓ Inserted first batch with series_id: {result1.series_ids['wind_power']}\")\n",
     "print(f\"  Time range: {dates1[0]} to {dates1[-1]}\")\n",
     "print(f\"  Value range: {df_batch1['wind_power'].min():.1f} - {df_batch1['wind_power'].max():.1f} MW\")"
@@ -361,7 +361,7 @@
     "})\n",
     "\n",
     "# Insert second batch with the SAME series_id\n",
-    "result2 = td.insert_run(df=df_batch2, series_ids={'wind_power': shared_series_id})\n",
+    "result2 = td.insert_batch(df=df_batch2, series_ids={'wind_power': shared_series_id})\n",
     "print(f\"✓ Inserted second batch with series_id: {result2.series_ids['wind_power']}\")\n",
     "print(f\"  Time range: {dates2[0]} to {dates2[-1]}\")\n",
     "print(f\"  Value range: {df_batch2['wind_power'].min():.1f} - {df_batch2['wind_power'].max():.1f} MW\")\n",
