--- a/examples/nb_03_forecast_revisions.ipynb
+++ b/examples/nb_03_forecast_revisions.ipynb
@@ -223,7 +223,7 @@
         "    # known_time is the start of this forecast's valid_time range\n",
         "    if i == 0:\n",
         "        # First forecast: use explicit series_id\n",
-        "        result = td.insert_run(\n",
+        "        result = td.insert_batch(\n",
         "            df=df_forecast,\n",
         "            known_time=known_time,\n",
         "            series_ids={\"forecast\": forecast_series_id}\n",
@@ -231,7 +231,7 @@
         "        series_ids_map = result.series_ids\n",
         "    else:\n",
         "        # Subsequent forecasts: reuse the same series_id\n",
-        "        result = td.insert_run(\n",
+        "        result = td.insert_batch(\n",
         "            df=df_forecast,\n",
         "            known_time=known_time,\n",
         "            series_ids=series_ids_map\n",
@@ -292,7 +292,7 @@
         "# Insert actual values with known_time set to the last valid_time\n",
         "# This represents when the actual values become known (after all data is collected)\n",
         "actual_known_time = actual_valid_times[-1]\n",
-        "result_actual = td.insert_run(\n",
+        "result_actual = td.insert_batch(\n",
         "    df=df_actual,\n",
         "    known_time=actual_known_time,\n",
         "    series_ids={\"actual\": actual_series_id}\n",
