--- a/examples/nb_04_timeseries_changes.ipynb
+++ b/examples/nb_04_timeseries_changes.ipynb
@@ -125,7 +125,7 @@
         "})\n",
         "\n",
         "# Insert the time series\n",
-        "result = td.insert_run(df=df)\n",
+        "result = td.insert_batch(df=df)\n",
         "\n",
         "print(f\"✓ Time series inserted successfully!\")\n",
         "print(f\"  Run ID: {result.run_id}\")\n",
@@ -1155,7 +1155,7 @@
         "\n",
         "This notebook demonstrated:\n",
         "\n",
-        "1. **Creating and inserting a time series**: Using `td.insert_run()` to create and store initial time series data\n",
+        "1. **Creating and inserting a time series**: Using `td.insert_batch()` to create and store initial time series data\n",
         "\n",
         "2. **Reading and visualizing time series**: Using `td.read()` with `return_value_id=True` to retrieve data and get value_ids for later updates\n",
         "\n",
