--- a/examples/nb_02_units_validation.ipynb
+++ b/examples/nb_02_units_validation.ipynb
@@ -356,7 +356,7 @@
         "# 3. Creates series with name = column name\n",
         "# 4. Converts values to canonical units and stores them\n",
         "\n",
-        "result = td.insert_run(df=df)\n",
+        "result = td.insert_batch(df=df)\n",
         "\n",
         "print(\"✓ Data inserted successfully!\")\n",
         "print(f\"\\nBatch ID: {result.batch_id}\")\n",
@@ -798,7 +798,7 @@
         "})\n",
         "\n",
         "try:\n",
-        "    result_compatible = td.insert_run(df=df_compatible, series_ids=series_ids_map)\n",
+        "    result_compatible = td.insert_batch(df=df_compatible, series_ids=series_ids_map)\n",
         "    print(\"✓ SUCCESS: kW values were automatically converted to MW and stored\")\n",
         "    print(f\"  Inserted {len(new_times)} new data points\")\n",
         "    print(f\"  Note: 100 kW = 0.1 MW (automatic conversion)\")\n",
@@ -845,7 +845,7 @@
         "})\n",
         "\n",
         "try:\n",
-        "    result_incompatible = td.insert_run(df=df_incompatible, series_ids=series_ids_map)\n",
+        "    result_incompatible = td.insert_batch(df=df_incompatible, series_ids=series_ids_map)\n",
         "    print(\"✗ UNEXPECTED: This should have failed but didn't!\")\n",
         "except td.IncompatibleUnitError as e:\n",
         "    print(f\"✓ EXPECTED ERROR: {type(e).__name__}\")\n",
@@ -894,7 +894,7 @@
         "})\n",
         "\n",
         "try:\n",
-        "    result_watts = td.insert_run(df=df_watts, series_ids=series_ids_map)\n",
+        "    result_watts = td.insert_batch(df=df_watts, series_ids=series_ids_map)\n",
         "    print(\"✓ SUCCESS: W values were automatically converted to MW and stored\")\n",
         "    print(f\"  Inserted {len(new_times3)} new data points\")\n",
         "    print(f\"  Note: 100000 W = 0.1 MW (automatic conversion)\")\n",
