--- a/examples/nb_08a_authentication_cli.ipynb
+++ b/examples/nb_08a_authentication_cli.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "cell-0",
    "metadata": {},
    "source": [
     "# Multi-tenant Authentication with API Keys - CLI Usage\n",
@@ -18,9 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "cell-1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Database URL configured: postgres://tsdbadmin:sykc9mku4fxsd4ya@u4c7ocoul8.r...\n",
+      "Environment variables set for API server\n",
+      "API URL: http://127.0.0.1:8000\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import uuid\n",
@@ -28,9 +40,11 @@
     "import pandas as pd\n",
     "import time\n",
     "from datetime import datetime, timezone, timedelta\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
     "\n",
     "# Use TEST_DATABASE_URL for testing (falls back to DATABASE_URL if not set)\n",
-    "DATABASE_URL = os.environ.get(\"TEST_DATABASE_URL\") or os.environ.get(\"DATABASE_URL\")\n",
+    "DATABASE_URL = os.environ.get(\"TEST_TIMEDB_DSN\") or os.environ.get(\"DATABASE_URL\")\n",
     "if not DATABASE_URL:\n",
     "    raise ValueError(\"Please set TEST_DATABASE_URL or DATABASE_URL environment variable\")\n",
     "\n",
@@ -48,6 +62,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cell-2",
    "metadata": {},
    "source": [
     "## Part 1: Setup Database Schema with Users Table\n",
@@ -57,9 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "cell-3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m✓\u001b[0m All timedb tables deleted\n"
+     ]
+    }
+   ],
    "source": [
     "# Delete existing schema (for a clean start)\n",
     "!timedb delete tables --dsn \"{DATABASE_URL}\" -y"
@@ -67,9 +91,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "cell-4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating database schema...\n",
+      "✓ Schema created successfully\n",
+      "\u001b[32m✓\u001b[0m Base timedb tables created\n",
+      "\u001b[32m✓\u001b[0m Users table created\n",
+      "\n",
+      "\u001b[1;32mSchema created successfully!\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# Create schema with users table\n",
     "!timedb create tables --dsn \"{DATABASE_URL}\" --with-users -y"
@@ -77,6 +115,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cell-5",
    "metadata": {},
    "source": [
     "## Part 2: Create Tenants and Users\n",
@@ -86,9 +125,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "id": "cell-6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tenant A ID: 58f8e2e1-2202-475e-ab0f-8973aada1b3a\n",
+      "Tenant B ID: 695ea155-2f68-4d05-967e-fcf4b81a2afc\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate two tenant IDs\n",
     "tenant_a_id = str(uuid.uuid4())\n",
@@ -100,9 +149,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "cell-7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m╭─\u001b[0m\u001b[32m─────────────────────────────────\u001b[0m\u001b[32m New User \u001b[0m\u001b[32m─────────────────────────────────\u001b[0m\u001b[32m─╮\u001b[0m\n",
+      "\u001b[32m│\u001b[0m \u001b[1;32mUser created successfully!\u001b[0m                                                   \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                              \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m   User ID:   \u001b[36m469e71cc-a7d5-486a-9867-bcaf4baf94da\u001b[0m                            \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m   Tenant ID: \u001b[36m58f8e2e1-2202-475e-ab0f-8973aada1b3a\u001b[0m                            \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m   Email:     \u001b[36malice@tenant-a.com\u001b[0m                                              \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                              \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m   \u001b[1;33mAPI Key:\u001b[0m \u001b[1mtUFzWPNOLVgwCmJasxypnu_EGMYGBkIfv34nYZDKZfg\u001b[0m                       \u001b[32m│\u001b[0m\n",
+      "\u001b[32m╰──────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
+      "\n",
+      "\u001b[33m⚠ Save the API key - it will not be shown again.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# Create User A for Tenant A\n",
     "!timedb users create --dsn \"{DATABASE_URL}\" --tenant-id {tenant_a_id} --email alice@tenant-a.com"
@@ -110,9 +178,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "cell-8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored API Key A: tUFzWPNOLVgwCmJasxypnu_EGMYGBkIfv34nYZDKZfg\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract API key from the output above\n",
     "# You'll need to copy the API key manually from the output above\n",
@@ -122,9 +199,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "cell-9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m╭─\u001b[0m\u001b[32m─────────────────────────────────\u001b[0m\u001b[32m New User \u001b[0m\u001b[32m─────────────────────────────────\u001b[0m\u001b[32m─╮\u001b[0m\n",
+      "\u001b[32m│\u001b[0m \u001b[1;32mUser created successfully!\u001b[0m                                                   \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                              \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m   User ID:   \u001b[36m7721d794-deaf-45af-938c-a583928ede2d\u001b[0m                            \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m   Tenant ID: \u001b[36m695ea155-2f68-4d05-967e-fcf4b81a2afc\u001b[0m                            \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m   Email:     \u001b[36mbob@tenant-b.com\u001b[0m                                                \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                              \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m   \u001b[1;33mAPI Key:\u001b[0m \u001b[1mg4v4aXk7E4uJL7VqoYp3pQlSNWk9HjfGSNmMPzGdUEc\u001b[0m                       \u001b[32m│\u001b[0m\n",
+      "\u001b[32m╰──────────────────────────────────────────────────────────────────────────────╯\u001b[0m\n",
+      "\n",
+      "\u001b[33m⚠ Save the API key - it will not be shown again.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# Create User B for Tenant B\n",
     "!timedb users create --dsn \"{DATABASE_URL}\" --tenant-id {tenant_b_id} --email bob@tenant-b.com"
@@ -132,9 +228,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "cell-10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored API Key B: g4v4aXk7E4uJL7VqoYp3pQlSNWk9HjfGSNmMPzGdUEc\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract API key from the output above\n",
     "api_key_b = input(\"Enter API Key for User B from output above: \")\n",
@@ -143,9 +248,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "cell-11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[3m                                  Users (4)                                   \u001b[0m\n",
+      "┏━━━━━━━━━━━━━━━━━━━━┳━━━━━━━━━━━━━┳━━━━━━━━━━━━━┳━━━━━━━━┳━━━━━━━━━━━━━━━━━━┓\n",
+      "┃\u001b[1m \u001b[0m\u001b[1mEmail             \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mUser ID    \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mTenant ID  \u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mStatus\u001b[0m\u001b[1m \u001b[0m┃\u001b[1m \u001b[0m\u001b[1mCreated         \u001b[0m\u001b[1m \u001b[0m┃\n",
+      "┡━━━━━━━━━━━━━━━━━━━━╇━━━━━━━━━━━━━╇━━━━━━━━━━━━━╇━━━━━━━━╇━━━━━━━━━━━━━━━━━━┩\n",
+      "│\u001b[36m \u001b[0m\u001b[36mbob@tenant-b.com  \u001b[0m\u001b[36m \u001b[0m│\u001b[2m \u001b[0m\u001b[2m7721d794...\u001b[0m\u001b[2m \u001b[0m│\u001b[2m \u001b[0m\u001b[2m695ea155...\u001b[0m\u001b[2m \u001b[0m│ \u001b[32mactive\u001b[0m │\u001b[2m \u001b[0m\u001b[2m2026-02-02 16:33\u001b[0m\u001b[2m \u001b[0m│\n",
+      "│\u001b[36m \u001b[0m\u001b[36malice@tenant-a.com\u001b[0m\u001b[36m \u001b[0m│\u001b[2m \u001b[0m\u001b[2m469e71cc...\u001b[0m\u001b[2m \u001b[0m│\u001b[2m \u001b[0m\u001b[2m58f8e2e1...\u001b[0m\u001b[2m \u001b[0m│ \u001b[32mactive\u001b[0m │\u001b[2m \u001b[0m\u001b[2m2026-02-02 16:32\u001b[0m\u001b[2m \u001b[0m│\n",
+      "│\u001b[36m \u001b[0m\u001b[36mbob@tenant-b.com  \u001b[0m\u001b[36m \u001b[0m│\u001b[2m \u001b[0m\u001b[2m92129dc8...\u001b[0m\u001b[2m \u001b[0m│\u001b[2m \u001b[0m\u001b[2med1c643e...\u001b[0m\u001b[2m \u001b[0m│ \u001b[32mactive\u001b[0m │\u001b[2m \u001b[0m\u001b[2m2026-02-02 16:31\u001b[0m\u001b[2m \u001b[0m│\n",
+      "│\u001b[36m \u001b[0m\u001b[36malice@tenant-a.com\u001b[0m\u001b[36m \u001b[0m│\u001b[2m \u001b[0m\u001b[2md5acf895...\u001b[0m\u001b[2m \u001b[0m│\u001b[2m \u001b[0m\u001b[2madbe46ce...\u001b[0m\u001b[2m \u001b[0m│ \u001b[32mactive\u001b[0m │\u001b[2m \u001b[0m\u001b[2m2026-02-02 16:31\u001b[0m\u001b[2m \u001b[0m│\n",
+      "└────────────────────┴─────────────┴─────────────┴────────┴──────────────────┘\n"
+     ]
+    }
+   ],
    "source": [
     "# List all users to verify\n",
     "!timedb users list --dsn \"{DATABASE_URL}\""
@@ -153,6 +275,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cell-12",
    "metadata": {},
    "source": [
     "## Part 3: Start the API Server\n",
@@ -162,9 +285,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "id": "cell-13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Killed any existing API server\n"
+     ]
+    }
+   ],
    "source": [
     "# Kill any existing API server first\n",
     "!pkill -f \"uvicorn.*timedb\" || true\n",
@@ -174,9 +306,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "cell-14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OSError",
+     "evalue": "Background processes not supported.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mOSError\u001b[39m                                   Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Start API server in background using CLI\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mget_ipython\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43msystem\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtimedb api --host 127.0.0.1 --port 8000 &\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/src/rebase-energy/timedb/.venv/lib/python3.14/site-packages/ipykernel/zmqshell.py:772\u001b[39m, in \u001b[36mZMQInteractiveShell.system_piped\u001b[39m\u001b[34m(self, cmd)\u001b[39m\n\u001b[32m    765\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m cmd.rstrip().endswith(\u001b[33m\"\u001b[39m\u001b[33m&\u001b[39m\u001b[33m\"\u001b[39m):\n\u001b[32m    766\u001b[39m     \u001b[38;5;66;03m# this is *far* from a rigorous test\u001b[39;00m\n\u001b[32m    767\u001b[39m     \u001b[38;5;66;03m# We do not support backgrounding processes because we either use\u001b[39;00m\n\u001b[32m    768\u001b[39m     \u001b[38;5;66;03m# pexpect or pipes to read from.  Users can always just call\u001b[39;00m\n\u001b[32m    769\u001b[39m     \u001b[38;5;66;03m# os.system() or use ip.system=ip.system_raw\u001b[39;00m\n\u001b[32m    770\u001b[39m     \u001b[38;5;66;03m# if they really want a background process.\u001b[39;00m\n\u001b[32m    771\u001b[39m     msg = \u001b[33m\"\u001b[39m\u001b[33mBackground processes not supported.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m--> \u001b[39m\u001b[32m772\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m(msg)\n\u001b[32m    774\u001b[39m \u001b[38;5;66;03m# we explicitly do NOT return the subprocess status code, because\u001b[39;00m\n\u001b[32m    775\u001b[39m \u001b[38;5;66;03m# a non-None value would trigger :func:`sys.displayhook` calls.\u001b[39;00m\n\u001b[32m    776\u001b[39m \u001b[38;5;66;03m# Instead, we store the exit_code in user_ns.\u001b[39;00m\n\u001b[32m    777\u001b[39m \u001b[38;5;66;03m# Also, protect system call from UNC paths on Windows here too\u001b[39;00m\n\u001b[32m    778\u001b[39m \u001b[38;5;66;03m# as is done in InteractiveShell.system_raw\u001b[39;00m\n\u001b[32m    779\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m sys.platform == \u001b[33m\"\u001b[39m\u001b[33mwin32\u001b[39m\u001b[33m\"\u001b[39m:\n",
+      "\u001b[31mOSError\u001b[39m: Background processes not supported."
+     ]
+    }
+   ],
    "source": [
     "# Start API server in background using CLI\n",
     "!timedb api --host 127.0.0.1 --port 8000 &"
@@ -185,6 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cell-15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,6 +348,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cell-16",
    "metadata": {},
    "source": [
     "## Part 4: Test Authentication Enforcement\n",
@@ -211,6 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cell-17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,6 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cell-18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,6 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cell-19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,6 +406,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cell-20",
    "metadata": {},
    "source": [
     "## Part 5: Demonstrate Tenant Isolation\n",
@@ -265,6 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cell-21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +434,7 @@
     "response = requests.post(\n",
     "    f\"{API_BASE_URL}/upload\",\n",
     "    json={\n",
-    "        \"run_start_time\": datetime.now(timezone.utc).isoformat(),\n",
+    "        \"batch_start_time\": datetime.now(timezone.utc).isoformat(),\n",
     "        \"value_rows\": value_rows_a\n",
     "    },\n",
     "    headers={\"X-API-Key\": api_key_a, \"Content-Type\": \"application/json\"}\n",
@@ -293,6 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cell-22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +461,7 @@
     "response = requests.post(\n",
     "    f\"{API_BASE_URL}/upload\",\n",
     "    json={\n",
-    "        \"run_start_time\": datetime.now(timezone.utc).isoformat(),\n",
+    "        \"batch_start_time\": datetime.now(timezone.utc).isoformat(),\n",
     "        \"value_rows\": value_rows_b\n",
     "    },\n",
     "    headers={\"X-API-Key\": api_key_b, \"Content-Type\": \"application/json\"}\n",
@@ -319,6 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cell-23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,13 +491,14 @@
     "print(f\"User A sees {data_a['count']} records:\")\n",
     "if data_a['count'] > 0:\n",
     "    df_a = pd.DataFrame(data_a['data'])\n",
-    "    print(df_a[['valid_time', 'series_key', 'value']])\n",
-    "    print(f\"\\nSeries keys visible to User A: {df_a['series_key'].unique().tolist()}\")"
+    "    print(df_a[['valid_time', 'name', 'value']])\n",
+    "    print(f\"\\nSeries names visible to User A: {df_a['name'].unique().tolist()}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cell-24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,13 +516,14 @@
     "print(f\"User B sees {data_b['count']} records:\")\n",
     "if data_b['count'] > 0:\n",
     "    df_b = pd.DataFrame(data_b['data'])\n",
-    "    print(df_b[['valid_time', 'series_key', 'value']])\n",
-    "    print(f\"\\nSeries keys visible to User B: {df_b['series_key'].unique().tolist()}\")"
+    "    print(df_b[['valid_time', 'name', 'value']])\n",
+    "    print(f\"\\nSeries names visible to User B: {df_b['name'].unique().tolist()}\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cell-25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,8 +535,8 @@
     "\n",
     "# Check that they see different data\n",
     "if data_a['count'] > 0 and data_b['count'] > 0:\n",
-    "    series_a = set(pd.DataFrame(data_a['data'])['series_key'].unique())\n",
-    "    series_b = set(pd.DataFrame(data_b['data'])['series_key'].unique())\n",
+    "    series_a = set(pd.DataFrame(data_a['data'])['name'].unique())\n",
+    "    series_b = set(pd.DataFrame(data_b['data'])['name'].unique())\n",
     "    overlap = series_a & series_b\n",
     "    \n",
     "    if len(overlap) == 0:\n",
@@ -392,6 +549,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cell-26",
    "metadata": {},
    "source": [
     "## Part 6: User Deactivation\n",
@@ -402,6 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cell-27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,6 +571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cell-28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,6 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cell-29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,6 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cell-30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,6 +614,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cell-31",
    "metadata": {},
    "source": [
     "## Summary\n",
@@ -499,15 +662,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "timedb",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.14.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
