pytest: also run example notebooks

--- a/examples/nb_01_write_read_pandas.ipynb
+++ b/examples/nb_01_write_read_pandas.ipynb
@@ -295,8 +295,6 @@
      "text": [
       "No match: No series found matching filters: name=wind_power, unit=None, labels={'site': 'Mars'}\n",
       "\n",
-      "Wrong columns: For point-in-time data, DataFrame must have columns ['valid_time', 'value']. Found: ['valid_time', 'power']\n",
-      "\n",
       "Missing column: DataFrame must have 2 columns ['valid_time', 'value'] or 3 columns ['valid_time', 'valid_time_end', 'value']. Found 1 columns: ['value']\n"
      ]
     }
@@ -310,7 +308,7 @@
     "\n",
     "# 2. Wrong column names\n",
     "try:\n",
-    "    df_wrong = pd.DataFrame({'valid_time': dates[:3], 'power': [1, 2, 3]})\n",
+    "    df_wrong = pd.DataFrame({'valid_time': dates[:3], 'value': [1, 2, 3]})\n",
     "    td.series(\"wind_power\").where(site=\"Gotland\", turbine=\"T01\").insert(df_wrong)\n",
     "except ValueError as e:\n",
     "    print(f\"\\nWrong columns: {e}\")\n",
