fix nb_04 missing known_time1

--- a/examples/nb_04_timeseries_changes.ipynb
+++ b/examples/nb_04_timeseries_changes.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,6 +89,7 @@
     "    known_time=base_time + timedelta(hours=2))\n",
     "\n",
     "batch_id_1, batch_id_2 = result_batch_1.batch_id, result_batch_2.batch_id\n",
+    "known_time_1, known_time_2 = base_time, base_time + timedelta(hours=2)\n",
     "series_id_temp, series_id_meter = result_batch_1.series_id, result_flat.series_id\n",
     "\n",
     "print(f\"Inserted meter_reading (flat) and temperature (overlapping) with 2 versions\")"
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +198,7 @@
        "                          2025-01-01 05:00:00+00:00  24.68"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -478,17 +479,17 @@
       "Valid time: 2025-01-01 06:00:00+00:00 (updated via batch_id)\n",
       "  known_time=2025-01-01 00:00:00+00:00 -> 24.70  [Batch 1 (original)]\n",
       "  known_time=2025-01-01 02:00:00+00:00 -> 26.03  [Batch 2 (revised)]\n",
-      "  known_time=2026-02-17 22:39:36.752556+00:00 -> 29.00  [UPDATE (new version)]\n",
+      "  known_time=2026-02-17 23:03:06.520953+00:00 -> 29.00  [UPDATE (new version)]\n",
       "\n",
       "Valid time: 2025-01-01 12:00:00+00:00 (updated via known_time)\n",
       "  known_time=2025-01-01 00:00:00+00:00 -> 20.10  [Batch 1 (original)]\n",
       "  known_time=2025-01-01 02:00:00+00:00 -> 19.52  [Batch 2 (revised)]\n",
-      "  known_time=2026-02-17 22:39:36.760956+00:00 -> 27.00  [UPDATE (new version)]\n",
+      "  known_time=2026-02-17 23:03:06.527167+00:00 -> 27.00  [UPDATE (new version)]\n",
       "\n",
       "Valid time: 2025-01-01 18:00:00+00:00 (updated via valid_time)\n",
       "  known_time=2025-01-01 00:00:00+00:00 -> 14.94  [Batch 1 (original)]\n",
       "  known_time=2025-01-01 02:00:00+00:00 -> 14.93  [Batch 2 (revised)]\n",
-      "  known_time=2026-02-17 22:39:36.767645+00:00 -> 25.00  [UPDATE (new version)]\n",
+      "  known_time=2026-02-17 23:03:06.531441+00:00 -> 25.00  [UPDATE (new version)]\n",
       "\n",
       "Each update created a NEW version with known_time=now().\n",
       "The original Batch 1 and Batch 2 values are preserved.\n"
@@ -537,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
